my first commit

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "todos-list",
+  "homepage": "https://ritika1406.github.io/todo-list.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,6 +13,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
